added moving puzzles horizontally

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 		<br />
 		<canvas id="canvas" width="300" height="500"></canvas>
 		<script type="module" src="main.js"></script>
+		<br />
+		<button type="button" id="test_move_left">Move Left</button>
+		<button type="button" id="test_move_right">Move Right</button>
 	</body>
 </html>
