added simple game loop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<title>Tetris</title>
 	</head>
 	<body>
+		<button id="startGameLoop">Start Game Loop</button>
+		<button id="stopGameLoop">Stop Game Loop</button>
+		<br />
+		<br />
+
 		<button type="button" id="test_change_type">Change Type</button>
 		<button type="button" id="test_flip_left">Flip Left</button>
 		<button type="button" id="test_flip_right">Flip Right</button>
