added colors and additional board to show next puzzles

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 		<br />
 		<br />
 
-		<button type="button" id="test_change_type">Change Type</button>
 		<button type="button" id="test_flip_left">Flip Left</button>
 		<button type="button" id="test_flip_right">Flip Right</button>
 		<br />
-		<canvas id="canvas" width="300" height="700"></canvas>
+		<main>
+			<canvas id="canvas" width="350" height="700"></canvas>
+			<canvas id="next-puzzle" width="50" height="50"></canvas>
+		</main>
 		<script type="module" src="main.js"></script>
-		<br />
-		<button type="button" id="test_move_left">Move Left</button>
-		<button type="button" id="test_move_right">Move Right</button>
 	</body>
 </html>
